# mcget

./: Cargo.toml  README.md  README_zh.md
examples/: connect_bedrock.rs  ping_bedrock.rs  ping_java.rs
locales/: en.yml  zh-CN.yml
src/: addr.rs  bedrock.rs  error.rs  java.rs  lib.rs  varint.rs
src/bedrock/: conn.rs  datagram.rs  encryption.rs  login.rs  message.rs  mod.rs  ping.rs  protocol.rs  raknet.rs  reliability.rs  reliable_conn.rs
