[package]
name = "mcping"
version = "0.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["ZCode"]
license = "MIT OR Apache-2.0"
description = "A Minecraft server status query library and CLI tool (Java SLP + Bedrock RakNet)"
repository = "https://github.com/luojia/mcping"
keywords = ["minecraft", "ping", "raknet", "bedrock", "slp"]
categories = ["network-programming", "command-line-utilities", "parser-implementations"]

[lib]
name = "mcping"
path = "src/lib.rs"

[[bin]]
name = "mcping"
path = "src/bin/mcping.rs"

[dependencies]
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "macros", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "ping_java"
path = "examples/ping_java.rs"

[[example]]
name = "ping_bedrock"
path = "examples/ping_bedrock.rs"

[profile.release]
opt-level = 3
lto = "thin"
