[package]
name = "mcget"
version = "0.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Luo Jia <me@luojia.cc>", "ZCode"]
license = "MIT OR Apache-2.0"
description = "A Minecraft server status query library and CLI tool (Java SLP + Bedrock RakNet)"
repository = "https://github.com/luojia65/mcget"
keywords = ["minecraft", "ping", "raknet", "bedrock", "slp"]
categories = ["network-programming", "command-line-utilities", "parser-implementations"]

[lib]
name = "mcget"
path = "src/lib.rs"

[[bin]]
name = "mcget"
path = "src/bin/mcget.rs"

[dependencies]
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "macros", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rust-i18n = "3"
sys-locale = "0.3"
flate2 = "1"
base64 = "0.22"
p384 = "0.13"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
elliptic-curve = { version = "0.13", features = ["ecdh"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "ping_java"
path = "examples/ping_java.rs"

[[example]]
name = "ping_bedrock"
path = "examples/ping_bedrock.rs"

[profile.release]
opt-level = 3
lto = "thin"
